Document PPDG/src/objects/Teller_Limits__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Allow_Submit_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_No__c</fullName>
        <description>Branch Number e.g. 1100, 1101</description>
        <label>Branch No</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCY__c</fullName>
        <description>Currency value, e.g. GBP. USD etc</description>
        <label>CCY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Authorisor__c</fullName>
        <label>First Authorisor</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Authorisor__c</fullName>
        <label>Fourth Authorisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <label>Function Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Type__c</fullName>
        <description>Distinguishes between different limit types</description>
        <inlineHelpText>T - Transaction Limit Type 
V - Vault Limit Type</inlineHelpText>
        <label>Limit Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Authorisor__c</fullName>
        <label>Second Authorisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Authorisor__c</fullName>
        <label>Third Authorisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Teller Limits</label>
    <listViews>
        <fullName>Limits_View</fullName>
        <columns>NAME</columns>
        <columns>CCY__c</columns>
        <columns>Function_Name__c</columns>
        <columns>Branch_No__c</columns>
        <columns>First_Authorisor__c</columns>
        <columns>Second_Authorisor__c</columns>
        <columns>Third_Authorisor__c</columns>
        <columns>Fourth_Authorisor__c</columns>
        <columns>Lower_Limit__c</columns>
        <columns>Upper_Limit__c</columns>
        <columns>Default__c</columns>
        <columns>Limit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Limits View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>